<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/card_background"
        android:padding="20dp"
        android:text="@string/new_location"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/location_name"
        android:textStyle="bold"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/e_g_paris" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/country_name"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editCountryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/e_g_france" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:layout_marginBottom="10px"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/priority"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/country_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/description"
        android:textSize="17sp" />



    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/visit_the_louvre_museum_in_paris" />



    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/save_location" />


</LinearLayout>