<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/card_background"
    android:layout_margin="8dp"
    android:elevation="4dp">


    <!-- Item Name -->
    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/item_name" />

    <!-- Country Name -->
    <TextView
        android:id="@+id/countryNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/country_name" />

    <!-- Priority -->
    <TextView
        android:id="@+id/PriorityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/priority"
        android:fontFamily="sans-serif-medium" />

</LinearLayout>
