<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_background"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/my_locations"
        android:textSize="48sp" />


    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_new_location" />

    <TextView
        android:id="@+id/DeleteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/want_to_delete_a_location_long_press_on_the_location"
        android:textSize="12sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"/>


</LinearLayout>