<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    android:layout_margin="50dp"
    android:elevation="4dp">

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Your Location"
        android:layout_marginBottom="20dp"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="15sp"
        android:background="@drawable/textview_border" />

    <TextView
        android:id="@+id/LocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/location"

        android:textSize="20sp" />


    <TextView
        android:id="@+id/LocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/CountryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/country"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"


        android:textColor="@android:color/holo_purple"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"/>


    <TextView
        android:id="@+id/DescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/description"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_purple"
        android:textSize="22sp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed"
        />

    <Button
        android:id="@+id/viewMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_gravity="center_horizontal"
        android:text="@string/view_in_google_maps"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/EditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_priority_status"
        android:textColor="@android:color/white" />



</LinearLayout>

